--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.19.2",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "react-typing-animation": "^1.6.2"
